Vorlettze fehlende Vorlesung eingebaut. Der Abschnitt zu Zusammenhangskomponenten der Eins fehlt noch.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2057 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -202,7 +202,10 @@
 
 \DeclareMathOperator{\rg}{rg}
 \DeclareMathOperator{\spn}{span}
-
+\DeclareMathOperator{\GL}{GL}
+\DeclareMathOperator{\SL}{SL}
+\DeclareMathOperator{\GO}{O}
+\DeclareMathOperator{\SO}{SO}
 
 \makeindex
 
@@ -2445,7 +2448,7 @@ Richtung $\overline{v'}$ und entspricht den bekannten euklidischen Varianten
 für Flächen.
 
 %satz 6.3.1
-\begin{satz}
+\begin{satz}\label{satz:631}
   Es ist $M$ genau dann eine $C^{k}$"~Untermannigfaltigkeit von $\R^{n}$ der
   Dimension $m$, wenn für alle $x^{0}\in M$ eine offene Umgebung
   $U\subset\R^{n}$ und eine $C^{k}$"~Abbildung $f\in C^{k}(U,\R^{n-m})$ mit
@@ -3443,19 +3446,78 @@ Begriff des Zusammenhangs eine Rolle. Hierfür machen wir einen Einschub:
   zusammenhängend, aber nicht wegweise zusammenhängend.
 \end{bsp}
 
+\section{Lie"~Gruppen}
+
+In diesem Abschnitt werden die Begriffe der topologischen Gruppe und der
+$C^{\infty}$"~Mannigfaltigkeit zusammengeführt. Das resultierende Ergebnis
+sind die \textsc{Lie}"~Gruppen.
+
+\begin{defini}[\textsc{Lie}"~Gruppe]
+  Eine algebraische Gruppe $G$ heißt \highl{\textsc{Lie}"~Gruppe}, falls auf
+  ihr die Struktur einer $C^{\infty}$"~Mannigfaltigkeit derart gegeben ist,
+  dass die Gruppenoperationen $C^{\infty}$"~differenzierbar sind, d.\,h. die
+  Abbildungen
+  \begin{enumerate}
+   \item $(a,b)\mapsto ab$ und
+   \item $a\mapsto a^{-1}$
+  \end{enumerate}
+  sind $C^{\infty}$"~differenzierbar.
+\end{defini}
+
+\begin{bemerk}
+  Die Kreuzprodukte differenzierbarer Mannigfaltigkeiten mit der
+  Produkttopologie sind wieder differenzierbare Mannigfaltigkeiten. Für die
+  Karten werden die Kreuzprodukte der Karten gewählt.
+
+  Damit sind \textsc{Lie}"~Gruppen spezielle topologische Gruppen. Sie finden
+  in vielen Gebieten der Mathematik und der theoretischen Physik Anwendung.
+\end{bemerk}
+
+\section{Geometrische Transformationsgruppen des $\R^{n}$}
+Aus der linearen Algebra sind folgende Untergruppen der allgemeinen
+symmetrischen Gruppe $S(\R^{n})$ bekannt:
+\begin{enumerate}
+ \item allgemeine lineare Gruppe $\GL(n)$
+ \item spezielle lineare Gruppe $\SL(n)$
+ \item orthogonale Gruppe $\GO(n)$
+ \item spezielle orthogonale Gruppe $\SO(n)$
+\end{enumerate}
+
+Wir wollen nun die \textsc{Lie}"~Gruppenstrukturen betrachten. Die Topologie
+in $\GL(n)$ wird über die Metrik eingeführt: $\GL(n)\cong M(n\times n)$
+(invertierbare $n\times n$ Matrizen). Diese Matrizen können als Teilmenge des
+$\R^{n^{2}}$ betrachtet werden und die Metrik überträgt sich:
+\begin{gather*}
+  d(A,B)=\sqrt{\sum_{i,j=1}^{n} (a_{ij}-b_{ij})^{2}}
+\end{gather*}
+Damit wird $\GL(n)$ ein vollständiger metrischer Raum, identifiziert mit
+$\R^{n^{2}}\setminus\FA$. Dabei ist
+$\FA=\{(a_{ij})\in\R^{n^{2}}\colon\det)a_{ii})=0\}$ topologisch abgeschlossen,
+d.\,h. $\GL(n)$ wird mit den offenen Mengen des $\R^{n^{2}}$ identifiziert.
+Damit folgt, dass die Gruppenoperationen dann $C^{\infty}$"~Abbildungen sind
+und dass $\GL(n)$ eine $n^{2}$"~dimensionale \textsc{Lie}"~Gruppe ist.
+
+$\SL(n)$ ist eine algebraische Untergruppe von $\GL(n)$ und topologisch
+abgeschlossen, also eine topologische Untergruppe. Wir behaupten, dass
+$\SL(n)$ eine $(n-1)^{2}$"~dimensionale $C^{\infty}$"~Untermannigfaltigkeit
+von $\GL(n)$. Zum Nachweis wenden wir \autoref{satz:631} an. \todo{Beweis
+weiter einfügen}
+
+\subsection{Zusammenhangskomponenten der Eins}
+
 
 \todo[inline]{fehlende Vorlesungen einfügen}
-gehört geometrischen Transformationsgruppen im Punkt "`Eins"':
-%Sei $I\in\GL(n)$ die Eins und betrachten $\GL(n)$ als $n^{2}$"~dimensionale
+\subsection{Tangentialräume im Punkt "`Eins"'}
+Sei $I\in\GL(n)$ die Eins und betrachten $\GL(n)$ als $n^{2}$"~dimensionale
 Untermannigfaltigkeit von $\R^{n^{2}}$ (offene Teilmenge). Damit folgt,
-%$T_{I}\GL(n)\cong \R^{n^{2}}=M(n\times n)$. Sei nun $I\in\SL(n)$ und
-%$T_{I}\SL(n)=\{A\in M(n\times n)\colon\spur A=0\}$. Dabei ist $\spur A=
-%\sum_{i=1}^{n} a_{ii}$.
+$T_{I}\GL(n)\cong \R^{n^{2}}=M(n\times n)$. Sei nun $I\in\SL(n)$ und
+$T_{I}\SL(n)=\{A\in M(n\times n)\colon\spur A=0\}$. Dabei ist $\spur A=
+\sum_{i=1}^{n} a_{ii}$.
 \begin{proof}
-  Betrachten $I\in O(n)$ mit $T_{I}O(n)\cong\{A\in M(n\times n)\colon
-  A^{T}=-A\}$. Wir haben interpretiert $O(n)=g^{-1}(I)$ für $g\colon M(n\times
+  Betrachten $I\in \GO(n)$ mit $T_{I}\GO(n)\cong\{A\in M(n\times n)\colon
+  A^{T}=-A\}$. Wir haben interpretiert $\GO(n)=g^{-1}(I)$ für $g\colon M(n\times
   n)\rightarrow M(n\times n)$ mit $g(A)\coloneq AA^{T}= (\sum_{i=1}^{n}
-  a_{ik}a_{jk})$. Es ist $T_{I}O(n)= \ker Dg(I)$ nach Satz
+  a_{ik}a_{jk})$. Es ist $T_{I}\GO(n)= \ker Dg(I)$ nach Satz
   6.\,3.\,5.(2)\todo{Link einfügen}. Für $\delta>0$ gilt
   $\lim_{\delta\rightarrow0} \nicefrac{1}{\delta}g(I+\delta V)-g(I)= V^{T}+V$.
   Also ist $T_{I}O(n)=\{V\in M(n\times n)\colon Dg(I)V=0\}= \{V\in M(n\times
