Die Punkte sollen Kommas sein.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2065 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -3065,7 +3065,7 @@ Verträglichkeitseigenschaften.
 %folg 8.1.4.
 \begin{folg}
   Sei $(G,\CT)$ eine topologische Gruppe, $U_1,\dotsc, U_n\in\CT$ und
-  $p_1,\dotsc, p_n\in\Z$. Dann ist auch $U_1^{p_1},\dotsc,
+  $p_1,\dotsc, p_n\in\Z$. Dann ist auch $U_1^{p_1}\cdot\dotso \cdot
   U_n^{p_n}\in\CT$.
   \begin{proof}
     Der Beweis erfolgt per Induktion nach $n$. Sei $n=2,
