Text des 1.AA hinzugefuegt
Damit der Text des 1.AA auch im Lauftext steht, habe ich ihn dem
entsprechenden Kapitel hinzugefuegt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2067 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -700,8 +700,9 @@ zur nächsten Definition:
   Der Begriff geht auf \textsc{Hausdorff} zurück. Er benutzt das in seiner
   Arbeit von 1914.
 
-  Weiterhin existiert noch ein 1.\,Abzählbarkeitsaxiom. Auf dieses wird in der
-  Veranstaltung nicht näher eingegangen.
+  Weiterhin existiert noch ein 1.\,Abzählbarkeitsaxiom. Das besagt,
+  dass es zu jedem $x\in X$ eine abzählbare Umgebungsbasis gibt. Auf
+  dieses wird in der Veranstaltung nicht näher eingegangen.
 \end{bemerk}
 
 \begin{satz}[\textsc{Alexandrov}/\textsc{Urysohn} 1923]
@@ -1920,7 +1921,7 @@ F\coloneq\{(\overline{x}(\overline{u}),\overline{v})\colon
 \overline{v}\in\spn(\frac{\partial\overline{x}}{\partial u_{1}}(\overline{u}),
 \frac{\partial\overline{x}}{\partial u_{2}}(\overline{u}))\}$.
 
-Sei $\overline{u}= \overline{u}(\overline{u}')$ eine Parametertransformation,
+Sei $\overline{u}'= \overline{u}(\overline{u}')$ eine Parametertransformation,
 d.\,h. ein Diffeomorphismus von $(0,1)^{2}$.
 Dann folgt, $\overline{x}'(\overline{u}')=
 \overline{x}(\overline{u}(\overline{u}'))$ von $F$ und
@@ -2078,7 +2079,7 @@ Fachgebiet auch recht oft angewendet.
 Wir geben uns die Standardbasis im $\R^{n}$ vor:
 $\overline{e}_{1},\dotsc,\overline{e}_{n}$ und definieren ein Element
 $\partial_{i}\in T_{X}M$ durch $\partial_{i}(U,\phi)\coloneq \overline{e}_{i}$.
-Wegen dem Isomorphismus $\R^{n}\cong T_{X}M$ ist
+Wegen des Isomorphismus $\R^{n}\cong T_{X}M$ ist
 $\{\partial_{1},\dotsc,\partial_{n}\}$ eine Basis in $T_{X}M$. Man schreibt auch
 $\partial_{i}=\colon\frac{\partial}{\partial x_{i}}$ bezüglich der Koordinaten
 $\overline{x}=(x_{1}, \dotsc, x_{n})^{T}$ bei gegebener Karte\footnote{Der $\R^{n}$ mit der Basis
