Der Punkt muss ein Komma sein.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2076 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/zaehle-topologie/skript.ltx
+++ b/zaehle-topologie/skript.ltx
@@ -3557,7 +3557,7 @@ $T_{I}\SL(n)=\{A\in M(n\times n)\colon\spur A=0\}$. Dabei ist $\spur A=
   \begin{enumerate}
    \item $\emptyset\in\CT$. Da $\emptyset$ offen ist, ist $\emptyset\in\CT$.
    \item Sei $I\neq\emptyset, A_{i}\in\CT\Rightarrow\forall x\in A_{i}\,\exists
-    B(x.\epsilon)\subset A_{i}\Rightarrow B(x,\epsilon)\in\bigcup_{i\in I}
+    B(x,\epsilon)\subset A_{i}\Rightarrow B(x,\epsilon)\in\bigcup_{i\in I}
     A_{i}\Rightarrow\bigcup_{i\in I} A_{i}$ ist offen.
    \item Seien $A_{1},\dotsc, A_{n}\in\CT$ und $x\in\bigcap_{i=1}^{n}
     A_{i}\Rightarrow\forall i\colon x\in A_{i}$. Da der Indexbereich endlich
