--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -61,6 +61,8 @@
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
 \usepackage{nicefrac}
+\usepackage{tikz}
+
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -121,6 +123,7 @@
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+\newcommand*{\F}{\mathbb{F}}      % Galois-Körper
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -160,7 +163,7 @@
 
 
 % Frakturbuchstaben
-\newcommand*{\FP}{\mahfrak{P}}
+\newcommand*{\FP}{\mathfrak{P}}
 
 
 % math. Operatoren
@@ -168,10 +171,13 @@
 \DeclareMathOperator{\SL}{SL}
 \DeclareMathOperator{\Sym}{Sym}
 \DeclareMathOperator{\Alt}{Alt}
+\DeclareMathOperator{\Aut}{Aut}
 \DeclareMathOperator{\AO}{AO}
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\Abb}{Abb}
-
+\DeclareMathOperator{\ggt}{ggT}
+\DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\End}{End}
 
 
 \makeindex
@@ -245,11 +251,9 @@
 % \theoremlisttype{all}
 \listtheorems{defini,festl}
 
-
-
-
-
 \chapter{Einführung}
+
+
 
 \section{Zahlbereiche}
 
@@ -303,14 +307,36 @@ Sei $\Omega$ eine Menge.
 \section{Geometrie}
 
 \begin{enumerate}
- \item $\AO(\R^{n})=\{f\colon\R^{n}\rightarrow\R^{n}\colon\norm{f(x)-f(y)=
-  \norm{x-y}} \forall x,y\in\R^{n}\}$ Bewegungsgruppe.
- \item \missingfigure{Bild der $P_{6}$"~Gruppe} Symmetriegruppe des
+ \item $\AO(\R^{n})=\{f\colon\R^{n}\rightarrow\R^{n}\colon\norm{f(x)-f(y)}=
+  \norm{x-y} \forall x,y\in\R^{n}\}$ Bewegungsgruppe.
+ \item Symmetriegruppe des
   regelmäßigen $n$"~Ecks $P_{n}$ mit $G=\{f\in\AO(\R^{2})\colon f(P_{n})=
-  P_{n}\}$ \textsc{Dieder}gruppe. Die Gruppe hat $2n$~Elemente.
+  P_{n}\}$ \textsc{Dieder}gruppe. Die Gruppe hat $2n$~Elemente.\\
+\begin{tikzpicture}[thick,
+information text/.style={rounded corners,fill=red!10,inner sep=1ex}]
+\draw (60:4ex) -- (120:4ex) -- (180:4ex) -- (240:4ex) -- (300:4ex)
+-- (360:4ex) -- cycle;
+\draw[xshift=1.85cm]
+  node[right,text width=6cm,information text]
+  {
+    Bild der $P_6$-Gruppe
+  };
+\end{tikzpicture}
  \item Friesgruppen: Symmetriegruppen von Friesen.
- \item kristallografische Gruppen in der Ebene oder im Raum:
-  \missingfigure{Symmetrisches Gitter}
+ \item kristallografische Gruppen in der Ebene oder im Raum:\\
+\begin{tikzpicture}
+\foreach \x in {1,2,3,4,5}
+\draw (\x,0) -- (\x,1);
+\foreach \y in {.1,.3,.5,.7,.9}
+\draw (.1,\y) -- (6,\y);
+%\draw (0,0) grid [step=.5cm] (5,3);
+\end{tikzpicture}
+\begin{tikzpicture}[thick]
+\foreach \x in {1,2,3,4,5}
+\draw (\x,0) -- (\x+1,1);
+\foreach \y in {.1,.3,.5,.7,.9}
+\draw (1,\y) -- (6,\y);
+\end{tikzpicture}
  \item Symmetriegruppen von Tetraeder, Würfel, Ikosaeder und ähnlichen Objekten.
 \end{enumerate}
 
@@ -362,9 +388,18 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{bsp}
 
 \begin{bemerk}
-  Wenn $M$ klein ist, kann man eine Verknüpfungstafel aufstellen:
-  \todo{Verknüpfungstafel}
-  Ein Beispiel sind die Wahrheitswerte.
+  Wenn $M$ klein ist, kann man eine Verknüpfungstafel aufstellen.  Ein
+  Beispiel sind die Wahrheitswerte.
+\begin{table}[htb]
+\centering
+\begin{tabular}{c|cc}
+  $\wedge$ & $w$ & $f$\\
+  \hline
+  $w$ & $w$ & $f$\\
+  $f$ & $f$ & $f$
+\end{tabular}
+\caption{Wahrheitswerte für die UND-Verknüpfung}
+\end{table}
 \end{bemerk}
 
 \begin{defini}[rechts-, linksneutral, neutral] Sei $M$ eine Monade und $e\in
