Umgebungen, Operatoren etc. noch definiert, Dokument sollte jetzt kompilieren
git-svn-id: https://svn.lug-jena.de/uni-skripte@2090 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-ellkurven/skript.ltx
+++ b/haberland-ellkurven/skript.ltx
@@ -103,6 +103,7 @@
 % Die folgenden Theoremumgebungen bekommen keine Nummer
 \theoremstyle{nonumberbreak}
 \newtheorem{fakt}{Fakt}
+\newtheorem{folg}{Folgerung}
 
 % \theoremheaderfont{\global\hasprooftrue\scshape}
 \theoremheaderfont{\scshape}
@@ -119,6 +120,7 @@
 \newcommand*{\definiautorefname}{Definition}
 \newcommand*{\bspautorefname}{Beispiel}
 \newcommand*{\festlautorefname}{Festlegung}
+\newcommand*{\folgautorefname}{Folgerung}
 % Zwischen Unter- und Unterunterabschnitten sollte nicht unterschieden
 % werden.
 \renewcommand*{\subsectionautorefname}{Abschnitt}
@@ -170,6 +172,7 @@
 \DeclareMathOperator{\GL}{GL}
 \DeclareMathOperator{\SL}{SL}
 \DeclareMathOperator{\grad}{grad}
+\DeclareMathOperator{\card}{card}
 
 \newcommand*{\dotcup}{\ensuremath{\mathaccent\cdot\cup}}
 
