Beim pmod war eine falsche Klammer
git-svn-id: https://svn.lug-jena.de/uni-skripte@2092 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/haberland-ellkurven/skript.ltx
+++ b/haberland-ellkurven/skript.ltx
@@ -259,7 +259,7 @@
 Sei $K$ ein beliebiger Körper.
 \begin{defini}[Projektive Ebene]
   Die \highl[Ebene!projektive]{projektive Ebene} $\P^{2}(K)$ ist per definitionem
-  $K^{3}\setminus\{0,0,0\}/_{~}$, wobei  $(x_{0}, x_{1}, x_{2})~ (y_{0},
+  $K^{3}\setminus\{0,0,0\}/_{\sim}$, wobei  $(x_{0}, x_{1}, x_{2})\sim (y_{0},
   y_{1}, y_{2})\Leftrightarrow \exists\lambda\in K^{*}$ mit $y_{j}= \lambda
   x_{j}$. Man schreibt $(x_{0}\colon x_{1}\colon x_{2})$.
 \end{defini}
@@ -555,7 +555,7 @@ beschreiben. Dabei ist $\lambda$ ein fixiertes Nichtquadrat in $\F_{q}^{*}$.
   Quadrat in $\F_{q}^{*}$, so liegen alle $q+1$~Punkte im Endlichen. Somit hat
   die Kreislinie $q+1$~Punkte. Ist dagegen $-1$ ein Quadrat in $\F_{q}^{*}$,
   liegen auf der Kreislinie $q-1$~Punkte. Für $q=p\in\P$ gilt, dass $-1$ genau
-  dann ein Quadrat, wenn $p\equiv 1\pmod{4}$.\todo{Stimmt das Modulo?}
+  dann ein Quadrat, wenn $p\equiv 1\pmod{4}$.
 \end{bsp}
 
 \begin{bsp}
@@ -603,7 +603,7 @@ Bis auf lineare Äquivalenz und Skalare nur zwei Typen:
       existieren $x,y,z\in\Z_{p}, (x,y,z)\neq(0,0,0)$ mti $ax^{2}+by^{2}
       +cz^{2}=0$. Seien alle o.\,B.\,d.\,A. durch $p$ teilbar. Ist
       $x\equiv0\pmod{p}$, so auch $y$. Mithin $ax^{2}+by^{2}+cz^{2}\equiv
-      0\pmod{p^{2}}\Rightarrow cz^{2}\equiv0\pmod{p^{2})\Rightarrow
+      0\pmod{p^{2}}\Rightarrow cz^{2}\equiv0\pmod{p^{2}}\Rightarrow
       z\equiv0\pmod{p}$ \lightning{} Also sind $x,y,z$ Einheiten. Weiter
       $ax^{2}+by^{2}\equiv0\pmod{p}$ wegen $p|c$. Dann ist
       $abx^{2}\equiv-(by)^{2} \pmod{p}$ und $-ab\equiv
