kleine Fehler ausgebuegelt
Das richtige := wurde definiert. In einigen Mengen fehlte der Backslash vor { und }. Satzbau teilweise geaendert bzw. verbessert. 

git-svn-id: https://svn.lug-jena.de/uni-skripte@2093 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -126,6 +126,9 @@
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 \newcommand*{\F}{\mathbb{F}}      % Galois-Körper
 
+% ordentliches :=
+\newcommand*{\coloneq}{\mathrel{\mathop:}=}
+
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
 % macht es leichter sie alle zu finden und auch ganz einfach
@@ -268,10 +271,10 @@
 
 \begin{enumerate}
  \item $(\Z,+), (\Q, +)$
- \item $(\Q\setminus{0}, \cdot)$
+ \item $(\Q\setminus\{0\}, \cdot)$
  \item $\Z/_{n\Z}$ der Restklassenring bzw. die Restklassengruppe modulo $n$
   mit der Addition.
- \item $(\Z/_{n\Z})^{\times}={a+n\Z\colon\ggt(a,n)=1}$ prime Restklassengruppe
+ \item $(\Z/_{n\Z})^{\times}=\{a+n\Z\colon\ggt(a,n)=1\}$ prime Restklassengruppe
   modulo $n$ mit der Multiplikation
 \end{enumerate}
 
@@ -279,11 +282,11 @@
 
 Sei $K$ ein Körper  und $V$ ein $K$"~Vektorraum. Dann haben wir:
 \begin{enumerate}
- \item $\GL(n,K)={A\in K^{n\times n}\colon \abs{A}\neq0}$ mit der
+ \item $\GL(n,K)=\{A\in K^{n\times n}\colon \abs{A}\neq0\}$ mit der
   Matrixmultiplikation. Dies ist die allgemeine lineare Gruppe des Grades $n$
   über $K$.
- \item $\GL(V)={f\colon V\rightarrow V\colon f\text{ linear und bijektiv}}$.
- \item $\SL(n,K)={A\in K^{n\times n}\colon\abs{A}=1}$ die spezielle lineare
+ \item $\GL(V)=\{f\colon V\rightarrow V\colon f\text{ linear und bijektiv}\}$.
+ \item $\SL(n,K)=\{A\in K^{n\times n}\colon\abs{A}=1\}$ die spezielle lineare
   Gruppe des Grades $n$ über $K$.
 \end{enumerate}
 
@@ -378,9 +381,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \chapter{Halbgruppen}
 
 \begin{defini}[Monade, Magma]
-  Sei $M$ eine Menge. Darauf legen wir eine \highl{Verknüpfung} fest $M\times
+  Sei $M$ eine Menge. Darauf legen wir eine \highl{Verknüpfung} $M\times
   M\rightarrow M$ mit $(a,b)\mapsto a\times b$ (alternativ auch $a+b, a\cdot
-  b$ oder $ab$). Dann ist $(M,\times)$ eine \highl{Monade} oder auch
+  b$ oder $ab$) fest. Dann ist $(M,\times)$ eine \highl{Monade} oder auch
   \highl{Magma}.
 \end{defini}
 
@@ -391,8 +394,8 @@ Codierungstheorie, \textsc{Banach}räume etc.
    \item Der Durchschnitt oder die Vereinigung auf der Potenzmenge $\FP(X)$.
    \item Der größte gemeinsame Teiler oder das kleinste gemeinsame Vielfache
     auf $\N$.
-   \item $\circ$ auf $\Abb(X)=\{f\colon X\rightarrow X\colon f\text{
-    Abbildung}\}$
+   \item Die Verknüpfung von Abbildungen $\circ$ auf der Menge aller Abbildungen
+    $\Abb(X)=\{f\colon X\rightarrow X\colon f\text{ Abbildung}\}$
   \end{enumerate}
 \end{bsp}
 
@@ -414,7 +417,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \begin{defini}[rechts-, linksneutral, neutral] Sei $M$ eine Monade und $e\in
   M$. Das Element $e$ ist genau dann \highl{rechtsneutral} (oder
   \highl{linksneutral}), wenn für alle $a\in M$ gilt: $ae=a$ (oder $ea=a$). Man
-  nennt $e$ genau dann neutral, wenn es rechts- und linksneutral ist.
+  nennt $e$ genau dann \highl{neutral}, wenn es rechts- und linksneutral ist.
 \end{defini}
 
 \begin{bemerk}
@@ -477,17 +480,18 @@ Codierungstheorie, \textsc{Banach}räume etc.
 \end{bemerk}
 
 \begin{bsp}
-  Sei $K$ ein Körper und $n$ eine natürliche Zahl. Dann folgt für das Monoid
-  bezüglich der Matrxmultiplikation $K^{n\times n}$ mit der Einheitsmatrix als
-  natürliches Element. Eine Matrix $A\in K^{n\times n}$ ist invertierbar, wenn
-  $A$ eine reguläre Matrix ist, d.\,h. die Matrix von $A$ ist ungleich $0$. In
-  der linearen Algebra impliziert die Linksinvertierbarkeit auch die
+  Sei $K$ ein Körper und $n$ eine natürliche Zahl. Dann folgt für das
+  Monoid bezüglich der Matrixmultiplikation $K^{n\times n}$ mit der
+  Einheitsmatrix als natürliches Element, dass eine Matrix $A\in
+  K^{n\times n}$ invertierbar ist, wenn $A$ eine reguläre Matrix ist,
+  d.\,h. die Matrix von $A$ ist ungleich $0$. In der linearen Algebra
+  impliziert die Linksinvertierbarkeit auch die
   Rechtsinvertierbarkeit.
 \end{bsp}
 
 %def 1.5
 \begin{defini}[Potenz]
-  Sei $H$ eine Halbgruppe und $a\in H, n\in N$. Die $n$"~te \highl{Potenz} von $a$ ist
+  Sei $H$ eine Halbgruppe und $a\in H, n\in \N$. Die $n$"~te \highl{Potenz} von $a$ ist
   definiert als $a^{n}\coloneq a\cdot\dotso \cdot a$ mit $n$~Faktoren. Wenn
   $H$ ein Monoid ist, gilt: $a^{0}\coloneq1$. Sollte $a$ invertierbar sein,
   dann können wir negative Potenzen festlegen: $a^{-n}= (a^{-1})^{n}$.
@@ -619,10 +623,10 @@ Codierungstheorie, \textsc{Banach}räume etc.
     \cdot)=\{A\in K^{n\times n}\colon\det A\neq0\}=\GL(n,K)$.
    \item Für jede nichtleere Familie $(G_{i})_{i\in I}$ von Gruppen $G_{i}$.
     Dann ist auch das \highl[Produkt!direktes]{direkte Produkt} $\prod_{i\in
-    I} G_{i}= \times_{i\in I}G_{i}= \{(g_{i})_{i\in I}\colon g_{i}\in G_{i}
-    \forall i\in I\}$ eine Gruppe\todo{richtiges grosses $X$ suchen.}
+    I} G_{i}= \bigtimes_{i\in I}G_{i}= \{(g_{i})_{i\in I}\colon g_{i}\in G_{i}
+    \forall i\in I\}$ eine Gruppe
     mit $(g_{i})(h_{i})\coloneq(g_{i}h_{i})$. Im Fall $I=\{1,\dotsc,n\}$
-    schreibt man $\prod_{i=1}^{n} G_{i} = \times_{i=1}^{n}= G_{1}\times\dotso
+    schreibt man $\prod_{i=1}^{n} G_{i} = \bigtimes_{i=1}^{n}= G_{1}\times\dotso
     \times G_{n}$.
   \end{enumerate}
 \end{bsp}
