--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -186,6 +186,11 @@
 \DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\spn}{span}
 
+% Operator \bigtimes definiert
+% Wurde von <agsekq$o7du5$1@ID-16779.news.dfncis.de>
+% kopiert und ein wenig geändert
+% eventuell findet sich irgendwo auch ein schöneres \bigtimes
+\newcommand*{\bigtimes}{\mathop{\raisebox{-.5ex}{\hbox{\huge{$\times$}}}}}
 
 
 % Herr Kuelshammer nummeriert mit (i), (ii), ...
