--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -539,7 +539,7 @@ Es ist $f\in L_{1}(\T)\leadsto (\hat{f}(k))$.
 	 e^{-ijx}\,dx}\\
       &= \abs[\bigg]{\frac{1}{ij}\widehat{f'}(j)} =\dotsb=\abs[\bigg]{\frac{1}{(ij)^{k}}
 	 \widehat{f^{(k)}} (j)}\\
-      &\leq \frac{1}{\abs{j}^{k}} \norm{f^{(k)}|L_{1}}\leq \frac{c}{(1+\abs{j})^k
+      &\leq \frac{1}{\abs{j}^{k}} \norm{f^{(k)}|L_{1}}\leq \frac{c}{(1+\abs{j})}^k
     \end{align*}
     Die Randterme oben verschwinden, da es sich um $2\pi$-periodische Funktionen handelt.
   \end{proof}
