--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -951,7 +951,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \highl{Index} von $H$ in $G$.
 \end{bemerk}
 
-\begin{satz}[Satz von Lagrange]
+\begin{satz}[Satz von Lagrange]\label{satz:32-lagrange}
   Für jede Untergruppe $H$ einer Gruppe $G$ gilt:
   \begin{gather*}
     \abs{G}= \abs{G\colon H}\abs{H}
@@ -972,14 +972,14 @@ Codierungstheorie, \textsc{Banach}räume etc.
 %bem 3.3
 \begin{bemerk}
   Setzen $\P\coloneq\{p\in\N\colon p\text{ Primzahl}\}$. Weiterhin schreiben
-  wir $m|n$ \todo{anderes Teilersymbol?}, falls $m$ ein Teiler von $n$ ist. 
+  wir $m\mid n$, falls $m$ ein Teiler von $n$ ist. 
 \end{bemerk}
 
 \begin{satz}
   Gruppen von Primzahlordnung sind zyklisch.
   \begin{proof}
     Sei $G$ eine Gruppe, $\abs{G}=p\in\P$ und $1\neq g\in G$. Nach dem Satz
-    von Lagrange $1\neq\abs{\langle g\rangle}\big|\abs{G}=p$. Also
+    von Lagrange $1\neq\abs{\langle g\rangle}\big\mid\abs{G}=p$. Also
     $\abs{\langle p\rangle}=p$, d.\,h. $G=\langle p\rangle$ zyklisch.
   \end{proof}
 \end{satz}
@@ -1010,6 +1010,233 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \end{enumerate}
   In beiden Fällen ist also $\abs{\langle a\rangle}= \inf\{k\in\N\colon
   a^{k}=1\}$.
+\end{bemerk}
+
+%Vorlesung vom 2009-04-23
+%satz 3.4
+\begin{satz}[Satz von \textsc{Fermat} oder \textsc{Euler}]
+  Für jedes Element $a$ einer endlichen Gruppe $G$ gilt: $a^{\abs{G}}=1$.
+  \begin{proof}
+    Nach \autoref{satz:32-lagrange} gilt: $\abs{G}= \underbrace{\abs{G\colon\langle
+    a\rangle}}_{=\colon l}\cdot \underbrace{\abs{\langle a\rangle}}_{=\colon
+    k}$. Nach der vorigen Bemerkung haben wir: $a^{k}=1$. Also
+    $a^{\abs{G}}=a^{kl}= (a^{k})^{l}=1^{l}=1$.
+  \end{proof}
+\end{satz}
+
+%satz 3.5
+\begin{satz}\label{satz:35}
+  Für $U\leq Z$ existiert eine natürliche Zahl $n$ mit $U=\{nz\colon
+  z\in\Z\}=\colon n\Z$.
+  \begin{proof}
+    Für $n\in\N_{0}$ ist $n\Z$ das Bild des Homomorphimus $\Z\rightarrow\Z$ mit
+    $z\mapsto nz$. Daher ist $n\Z\leq\Z$. Sei $U\leq Z$ und \OE\footnote{Herr
+    Külshammer nutzt dieses als Zeichen für o.\,B.\,d.\,A.} ist
+    $U\neq\{0\}=0\Z$. Für $a\in U\setminus\{0\}$ ist auch $-a\in U$. Daher
+    $U\cap\N\neq\emptyset$. Wie jede nichtleere Teilmenge von $\N$ enthält auch
+    der Durchschnitt ein kleinstes Element $n$. Dann ist $2n=n+n\in U, 3n\in U$
+    usw., d.\,h. $kn\in U$ für $k\in\N$. Folglich auch $-kn\in U$ und $0\in U$.
+    Also ist $n\Z\subseteq U$.
+
+    Ist $b\in U$ beliebig. Dann liefert die Division mit Rest einen Quotienten
+    $q\in\Z$ und einen Rest mit $r\in\Z$. Dabei gilt: $b=qn+r$. Wegen
+    $n\Z\subseteq U$ ist $r=b-qn\in U$. Nach der Wahl des $n$ muss $r=0$
+    gelten. Folglich: $b=qn\in n\Z$. Dann ist gezeigt: $U=n\Z$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Es ist $\abs{\Z\colon n\Z}=n$ für $n\in\N$. Denn für $z\in\Z$ existieren
+  Quotient und Rest aus $\Z$ mit $z=qn+r$ für $0\leq r<n$. Daher ist $z\in
+  r+n\Z$. Folglich hat man: $\Z= (0+n\Z)\cup(1+n\Z)\cup\dotsb\cup(n-1+n\Z)$.
+  Da $0\mathord{,}1,\dotsc,n-1$ in paarweise verschiedenen Linksnebenklassen
+  nach $n\Z$ liegen, folgt die Behauptung. Daher besitzt $\Z$ für jede
+  natürliche Zahl $n$ genau eine Untergruppe vom Index $n$.
+\end{bemerk}
+
+%satz 3.6
+\begin{satz}
+  Jede Untergruppe $V$ einer zyklischen Gruppe $G=\langle g\rangle$ ist wieder zyklisch.
+  \begin{proof}
+    Sei $f$ ein Homomorphimus (Epimorphismus) von $(\Z,+)$ nach $(G,\cdot)$ mit
+    $n\mapsto g^{n}$. Nach dem \autoref{satz:27} (Punkt iv) gilt:
+    $V=f(f^{-1}(V))$ mit $f^{-1}(V)\leq \Z$ und nach \autoref{satz:35} ist
+    $f^{-1}(V)=n\Z$ für ein $n\in\N_{0}$. Daher $V=f(n\Z)=\langle
+    g^{n}\rangle$ zyklisch.
+  \end{proof}
+\end{satz}
+
+%def 3.7
+\begin{defini}[Doppelnebenklassen]
+  Sei $G$ eine Gruppe und $H$ und $K$ zwei Untergruppen. Weiterhin seien $a$
+  und $b$ zwei Elemente aus $G$. Wir schreiben $a\equiv b\pmod{H,K}$, falls
+  $h\in H, k\in K$ mit $b=hak$ existieren. 
+\end{defini}
+
+\begin{satz}
+  Die Kongruenz modulo $H$ und $K$ ist eine Äquivelenzrelation auf $G$.
+  \begin{proof}
+    \begin{enumerate}
+     \item Für $a\in G$ folgt: $a=1a1$ mit $1\in H, 1\in K$. Also ist $a\equiv
+      a\pmod{H,K}$.
+     \item Sei $a\equiv b\pmod{H,K}\Rightarrow\exists h\in H, k\in K\colon
+      b=hak\Rightarrow a=h^{-1}bk^{-1}$ mit $h^{-1}\in H, k^{-1}\in
+      K\Rightarrow b\equiv a\pmod{H,K}$.
+     \item $a\equiv b\pmod{H,K}$ und $b\equiv c\pmod{H,K}\Rightarrow\exists
+      h,h'\in H, k,k'\in K\colon b=hak, c=h'ak'\Rightarrow c=h'hakk'$. Also
+      ist $a\equiv c\pmod{H,K}$.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Für jedes Element $a\in G$ ist die Äquivalenzklasse von $a$ bezüglich der
+  Äquivalenzrelation die \highl{Doppelnebenklasse} $HaK\coloneq\{hak\colon
+  h\in H, k\in K\}$ von $a$ nach $H$ und $K$. Man setzt: $H\setminus
+  G/K\coloneq\{HaK\colon a\in G\}$. Jedes $H\setminus G=H\setminus G/1$ und
+  $G/K=1\setminus G/K$. Im Allgemeinen ist die Anzahl der Elemente einer
+  Doppelnebenklasse \emph{kein} Teiler der Gruppenordnung.
+\end{bemerk}
+
+\begin{bsp}
+  Sei $G\coloneq\Sym(3), H\coloneq\langle b\rangle, K\coloneq\langle c\rangle,
+  a\coloneq1$ mit $b\coloneq
+  \begin{pmatrix}
+    1 & 2 & 3\\
+    2 & 1 & 3
+  \end{pmatrix}, c\coloneq
+  \begin{pmatrix}
+    1 & 2 &3\\
+    3 & 2 & 1
+  \end{pmatrix}$. Dann besteht $H$ aus $\{1,b\}$ und $K$ aus $\{1,c\}$. Es ist
+  $HaK=\{1,b,c,bc\}$. Also $\abs{HaK}=4\nmid 6=\abs{G}$.
+\end{bsp}
+
+%satz 3.8
+\begin{satz}\label{satz:38}
+  Seien $G$ eine Gruppe, $H,K\leq G$ und $a\in G$. Dann enthält $HaK$ genau
+  $\abs{H\colon H\cap aKa^{-1}}$ Linksnebenklassen nach $K$ und genau
+  $\abs{K\colon a^{-1}Ha\cap K}$ Rechtsnebenklassen nach $H$. Insbesondere ist
+  $\abs{HaK}= \abs{H\colon H\cap aKa^{-1}}\cdot\abs{K}= \abs{K\colon
+  a^{-1}Ha\cap K}\cdot\abs{H}$.
+  \begin{proof}
+    Es reicht, den Beweis für eine Seite zu führen. Der Rest folgt aus
+    Symmetriegründen.  Es ist $HaK=\bigcup_{h\in H} f(h)$ mit $f\colon
+    H\rightarrow G/K$ mit $h\mapsto haK$. Dabei gilt für Elemente $h,h'\in H$:
+    $f(h)=f(h')\Leftrightarrow haK=h'aK\Leftrightarrow a^{-1}h^{-1}h'a\in
+    K\Leftrightarrow h^{-1}h'\in aKa^{-1}\cap H\Leftrightarrow h(aKa^{-1}\cap
+    H)= h'(aKa^{-1}\cap H)$.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  Nach dem \autoref{satz:27}(i) ist $aKa^{-1}=\ad_{a}(K)\leq G$ und analog
+  $a^{-1}Ha\leq G$.
+\end{bemerk}
+
+\begin{bsp}
+  Für $a=1$ ist $HaK=HK$. Im Allgemeinen ist $HK\nleq K$. Nach dem
+  \autoref{satz:38} enthält $HK$ genau $\abs{H\colon H\cap K}$
+  Linksnebenklassen nach $K$ und genau $\abs{K\colon K\cap H}$
+  Rechtsnebenklassen nach $H$. Insbesondere gilt:
+  \begin{enumerate}
+   \item $\abs{HK}= \abs{H\colon H\cap K}\cdot\abs{K}= \abs{K\colon H\cap
+    K}\cdot\abs{H}$
+   \item $\abs{H\colon H\cap K}\leq \abs{G\colon K}$
+   \item $\abs{H\colon H\cap K}=\abs{G\colon K}<\infty\Rightarrow G=HK=KH$
+  \end{enumerate}
+\end{bsp}
+
+\begin{bemerk}
+  Den Satz von \textsc{Lagrange} (\autoref{satz:32-lagrange}) kann man
+  folgendermaßen verallgemeinern: Ist $G$ eine Gruppe und $K\leq H\leq G$, so
+  gilt: $\abs{G\colon K}= \abs{G\colon H}\cdot\abs{H\colon K}$. Denn ist das
+  $G=\dotcup_{i\in I} g_{i}H$ und $H=\dotcup_{j\in J} h_{j}K$, so ist
+  $G=\dotcup_{\substack{i\in I\\ j\in J}} g_{i}h_{j}K$.
+\end{bemerk}
+
+\begin{satz}
+  Für Untergruppen $H$ und $K$ einer Gruppe $G$ gilt stets:
+  \begin{enumerate}
+   \item $\abs{G\colon H\cap K}\leq\abs{G\colon H}\cdot\abs{G\colon K}$
+   \item $\abs{G\colon H\cap K}= \abs{G\colon H}\cdot\abs{G\colon
+    K}<\infty\Rightarrow G=HK=KH$
+   \item Seien $\abs{G\colon H}, \abs{G\colon K}$ endlich und teilerfremd.
+    Dann ist $\abs{G\colon H\cap K}= \abs{G\colon H}\cdot\abs{G\colon K}$ und
+    $G= HK=KH$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item $\abs{G\colon H\cap K}= \abs{G\colon H}\cdot\abs{H\colon H\cap
+      K}\leq\abs{G\colon H}\cdot\abs{G\colon K}$ (letzter Schritt nach
+      \autoref{satz:38}(ii))
+     \item Sei $\abs{G\colon H\cap K}= \abs{G\colon H}\cdot \abs{G\colon
+      K}<\infty$. Dann zeigt der Beweis des ersten Teiles dass $\abs{G\colon
+      K}= \abs{H\colon H\cap K}$. Aus \autoref{satz:38}(iii) folgt dann:
+      $G=HK=KH$.
+     \item Seien $\abs{G\colon H}, \abs{G\colon K}$ endlich und teilerfremd.
+      Die obige Bemerkung zeigt, dass $\abs{G\colon H}\big\mid\abs{G\colon
+      H\cap K}$ und $\abs{G\colon K}\big\mid \abs{G\colon H\colon K}$. Daher
+      ist $\abs{G\colon H}\cdot\abs{G\colon K}\big\mid \abs{G\colon H\cap K}$.
+      Mit dem ersten Punkt folgt, dass $\abs{G\colon H\cap K}= \abs{G\colon
+      H}\cdot\abs{G\colon K}$ und (ii) liefert $G=HK=KH$.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+%kap 4
+\chapter{Normalteiler und Faktorgruppen}
+
+%satz 4.1
+\begin{satz}
+  Für eine Untergruppe $N$ einer Gruppe $G$ sind die folgenden Aussagen
+  äquivalent:
+  \begin{enumerate}[(1)]
+   \item $gNg^{-1}\subseteq N$ für alle $g\in G$
+   \item $gNg^{-1}=N$ für alle $g\in G$
+   \item $gN=Ng$ für alle $g\in G$
+   \item $G/N$ ist eine Gruppe mit $(gN)(hN)\coloneq gN$ für alle $g,h\in G$
+   \item Es exisiert eine Gruppe $H$ und ein Homomorphimus $f\colon
+    G\rightarrow H$ mit $N=\ker f$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{itemize}
+     \item[$1\Rightarrow2$] Ist die erste Aussage erfüllt, so ist
+      $N=g\underbrace{g^{-1}N(g^{-1})^{-1}}_{\subseteq N}g^{-1}\subseteq
+      gNg^{-1}$.
+     \item[$2\Rightarrow3$] Multiplizieren mit $g$ von rechts.
+     \item[$3\Rightarrow4$] Sei die dritte Bedingung erfüllt. Für $g,h,k\in G$
+      ist dann $(gN)(hN)= gNhN=ghNN=ghN$, d.\,h. die Multiplikation in $G/N$
+      ist wohldefiniert. Ferner ist mit $(gN\cdot hN)(kN)= ghN\cdot kN= (gh)kN=
+      g(hk)N= gN(hkN)= gN(hNkN)$ das Assoziativgesetz erfüllt. Daher ist $G/N$
+      eine Halbgruppe. Außerdem ist $1N\cdot gN= 1gN=gN$ und $(g^{-1}N)(gN)=
+      g^{-1}gN=1N$.
+     \item[$4\Rightarrow5$] Sei $H\coloneq G/N$ und $f(g)\coloneq gN$ für alle
+      $g\in G$. Dann ist $f(g)f(h)= (gN)(hN)= ghN= f(gh)$ für $g,h\in G$,
+      d.\,h. $f$ ist ein Homomorphimus. Insbesondere $1_{G/N}=f(1_{G})=1N$.
+      Für $x\in G$ gilt ferner: $x\in\ker f\Leftrightarrow
+      f(x)=1\Leftrightarrow xN=1N\Leftrightarrow1^{-1}x=x\in N$. Also $\ker
+      f=N$.
+     \item[$5\Rightarrow1$] Zuletzt sei (5) erfüllt und weiter $x\in N=\ker f,
+      g\in G$. Dann $f(gxg^{-1})= f(g)f(x)f(g^{-1})=f(g)1f(g^{-1})=
+      f(g)f(g^{-1})= f(gg^{-1})= f(1)=1$, d.\,h. $gxg^{-1}\in\ker f=N$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{defini}[normale Untergruppe, Normalteiler]
+  Gegebenenfalls heißt das $N$ \highl{normal}\index{Untergruppe!normale} oder
+  \highl{Normalteiler} in $G$. Man schreibt $N\trianglelefteq G$
+\end{defini}
+
+\begin{defini}[Faktorgruppe]
+  Die Gruppe $G/N$ heißt \highl{Faktorgruppe} von $G$ nach $N$.
+\end{defini}
+
+\begin{bemerk}
+  Für $N\trianglelefteq G$ ist $f\colon G\rightarrow G/N$ mit $g\mapsto gn$ ein
+  Epimorphismus. Dieser heißt \highl[Epimorphismus!kanonischer]{kanonischer
+  Epimorphismus} von $G$ auf $G/N$.
 \end{bemerk}
 
 
