Operatoren definiert und falsches \mid entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2104 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -16,7 +16,7 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
-%\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
@@ -30,7 +30,6 @@
 \usepackage[utf8]{inputenc}
 \usepackage{babel}
 \usepackage{lmodern}		% Latin Modern
-% \usepackage{type1ec}           % cm-super
 \usepackage[T1]{fontenc}        % T1-Schriften notwendig für PDFs
 \usepackage{textcomp}           % wird benötigt, damit der \textbullet
                                 % für itemize in lmodern gefunden wird.
@@ -190,6 +189,7 @@
 \DeclareMathOperator{\Bld}{Bld}
 \DeclareMathOperator{\ad}{ad}
 \DeclareMathOperator{\Inn}{Inn}
+\DeclareMathOperator{\Out}{Out}
 
 
 % Operator \bigtimes definiert
@@ -198,6 +198,8 @@
 % eventuell findet sich irgendwo auch ein schöneres \bigtimes
 \newcommand*{\bigtimes}{\mathop{\raisebox{-.5ex}{\hbox{\huge{$\times$}}}}}
 
+% Zeichen für disjunkte Vereinigung
+\newcommand*{\dotcup}{\ensuremath{\mathaccent\cdot\cup}}
 
 % Herr Kuelshammer nummeriert mit (i), (ii), ...
 % bei paralist muss das per \defaultenum eingestellt werden
@@ -979,7 +981,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Gruppen von Primzahlordnung sind zyklisch.
   \begin{proof}
     Sei $G$ eine Gruppe, $\abs{G}=p\in\P$ und $1\neq g\in G$. Nach dem Satz
-    von Lagrange $1\neq\abs{\langle g\rangle}\big\mid\abs{G}=p$. Also
+    von Lagrange $1\neq\abs{\langle g\rangle}\mid\abs{G}=p$. Also
     $\abs{\langle p\rangle}=p$, d.\,h. $G=\langle p\rangle$ zyklisch.
   \end{proof}
 \end{satz}
@@ -1175,9 +1177,9 @@ Codierungstheorie, \textsc{Banach}räume etc.
       K}= \abs{H\colon H\cap K}$. Aus \autoref{satz:38}(iii) folgt dann:
       $G=HK=KH$.
      \item Seien $\abs{G\colon H}, \abs{G\colon K}$ endlich und teilerfremd.
-      Die obige Bemerkung zeigt, dass $\abs{G\colon H}\big\mid\abs{G\colon
-      H\cap K}$ und $\abs{G\colon K}\big\mid \abs{G\colon H\colon K}$. Daher
-      ist $\abs{G\colon H}\cdot\abs{G\colon K}\big\mid \abs{G\colon H\cap K}$.
+      Die obige Bemerkung zeigt, dass $\abs{G\colon H}\mid\abs{G\colon
+      H\cap K}$ und $\abs{G\colon K}\mid \abs{G\colon H\colon K}$. Daher
+      ist $\abs{G\colon H}\cdot\abs{G\colon K}\mid \abs{G\colon H\cap K}$.
       Mit dem ersten Punkt folgt, dass $\abs{G\colon H\cap K}= \abs{G\colon
       H}\cdot\abs{G\colon K}$ und (ii) liefert $G=HK=KH$.
     \end{enumerate}
@@ -1462,7 +1464,7 @@ Beantworten Sie die folgenden Fragen mit GAP:
 \end{enumerate}
 
 \begin{thebibliography}{99}
- \bibitem{alperin} \textsc{Alperin"=Bell}. Groups and representations.
+ \bibitem{alperin} \textsc{Alperin"=Bell}. Groups and representations.
  \bibitem{asch} \textsc{Aschbacher}. Finite group theory.
  \bibitem{issacs} \textsc{Isaacs}. Finite group theory.
  \bibitem{kurzweil} \textsc{Kurzweil-Stellmacher}. Theorie der endlichen Gruppen.
