kleine Fehler beseitigt
git-svn-id: https://svn.lug-jena.de/uni-skripte@2106 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -16,7 +16,7 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
-\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+%\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
@@ -39,7 +39,7 @@
                                        % amsmath-Umgebungen z.\,B. $$...$$
 \usepackage{amssymb}     % wird für \R, \C,... gebraucht
 \usepackage{fixmath}     % ISO-konforme griech. Buchstaben
-\usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
+%\usepackage[euro]{isonums} % definiert Komma als Dezimaltrennzeichen
 
 \usepackage[amsmath,thmmarks,hyperref]{ntheorem} % für die Theorem-Umgebungen
                                                  % (satz, defini, bemerk)
@@ -1525,7 +1525,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   Seien $\Omega$ eine Menge und $G$ eine $\Omega$"~Gruppe. Eine Untergruppe
   $H\leq G$ mit $^{\omega}h\in H$ für alle $\omega\in\Omega$ und $h\in H$
   heißt \highl{$\Omega$"~Untergruppe} von $G$. Ist $H\trianglelefteq G$, so
-  heißt $H$ \hihl{$\Omega$"~Normalteiler}.
+  heißt $H$ \highl{$\Omega$"~Normalteiler}.
 \end{defini}
 
 \begin{bemerk}
@@ -1584,7 +1584,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{gather}
     \label{eq:51}
        G=G_{0}\trianglerighteq G_{1}\trianglerighteq\dotso \trianglerighteq
-       G_{l}=1$
+       G_{l}=1
   \end{gather}
   einer Gruppe $G$ heißt \highl{Subnormalreihe} von $G$ der \highl{Länge} $l$
   mit \highl{Faktor}en $G_{0}/G_{1},\dotsc, G_{l-1}/G_{l}$. Ist
@@ -1626,13 +1626,13 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{gather}
     \label{eq:53}
        G=G_{0}\trianglerighteq G_{1}\trianglerighteq\dotso \trianglerighteq
-       G_{l}=1$
+       G_{l}=1
   \end{gather}
   und
   \begin{gather}
     \label{eq:54}
        G=H_{0}\trianglerighteq H_{1}\trianglerighteq\dotso \trianglerighteq
-       H_{m}=1$
+       H_{m}=1
   \end{gather}
   einer Gruppe $G$ heißen \highl{isomorph}, wenn $l=m$ ist und ein
   $f\in\Sym(l)$ mit $G_{i-1}/G_{i}\cong H_{f(i)-1}/H_{f(i)}$ für alle $i$
